gac_sb/objects/AppATdateFormationPortail__c.object
<CustomObject>
    <fields>
        <fullName>CodePostalFormation__c</fullName>
        <label>Code postal de la formation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formation__c</fullName>
        <label>Formation Portail</label>
        <referenceTo>AppATformationPortail__c</referenceTo>
        <relationshipLabel>Dates formation Portail</relationshipLabel>
        <relationshipName>DatesFormationPortail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Horaires__c</fullName>
        <label>Horaires</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lieu__c</fullName>
        <inlineHelpText>Laisser vide pour pré-remplissage avec les champs rue, ville, code postal et pays de formation</inlineHelpText>
        <label>Lieu</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PaysFormation__c</fullName>
        <defaultValue>&apos;France&apos;</defaultValue>
        <label>Pays de la formation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RueFormation__c</fullName>
        <label>Rue de la formation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VilleFormation__c</fullName>
        <label>Ville de la formation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Date formation Portail</label>
    <nameField>
        <displayFormat>FormationPortail-{0000}</displayFormat>
        <label>Identifiant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dates formation Portail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>